kurlmimedata: don't portal symlinks

they are not really supported. from testing it seems that opening
O_NOFOLLOW results in the portal not being able to use the fd so
ultimately we have no way to copy a symlink (instead of the file it
points to)

BUG: 464225


(cherry picked from commit 14e954248e365098e4b98cfd7c76e5ea1defb8a7)